2013-07-25 19:54  dpenkler

	* [r1603] New board
	  Adding support for Agilent 82351A PCIe card to 82350b driver
	  agilent_82350b_init.c Cleaned up initialisation printk's
	  ib_internal.h YYPARSE_PARAM declaration fix for fussy gcc 4.8.0

2013-05-03 10:14  dpenkler

	* [r1602] ChangeLog: Removed more Changelog duplicates

2013-05-03 09:59  dpenkler

	* [r1601] ChangeLog: Removed Changelog duplicates. Bumped version
	  to 3.2.18 in [R1599]

2013-05-03 09:40  dpenkler

	* [r1600] ChangeLog, configure.ac,
	  drivers/gpib/lpvo_usb_gpib/lpvo_usb_gpib.c,
	  drivers/gpib/pc2/pc2_init.c, drivers/gpib/tnt4882/tnt4882_init.c:
	  Fixes for kernel version >= 3.7\nktermios in
	  lpvo_usb_gpib.c\include <asm-generic>/dma.h in pc2_init.c for
	  request_dma() free_dma()

2013-04-19 03:08  fmhess

	* [r1599] drivers/gpib/tnt4882/tnt4882.h: Fixed compile error.

2013-03-04 03:01  fmhess

	* [r1598] doc/linux-gpib.sgml, drivers/gpib/tnt4882/tnt4882.h,
	  drivers/gpib/tnt4882/tnt4882_init.c: Added pci device id for
	  CEC-488, which is a rebranded NI board.

2012-12-20 08:13  dpenkler

	* [r1596] ChangeLog: Updated Changelog with svn log entries

2012-12-19 21:02  dpenkler

	* [r1593] configure.ac: Bumped version to 3.2.17

2012-09-04 01:51:27 fmhess

	* [r1592] Removed more includes of kernel's obsolete asm/system.h

2012-09-04 01:42:18 fmhess

	* [r1591] Removed an include that breaks compilation on 3.5.3 kernel.
	          Checked that it still compiles against a 2.6.32 kernel.

2012-09-04 01:41:18 fmhess

	* [r1590] Removed a garbage character at the end of an include line.


2012-04-25 06:29:13 fmhess

	* [r1589] Fix check of return value from mutex_trylock.


2011-04-08 21:02  fmhess

	* [r1565] ChangeLog: Updated ChangeLog with "svn2cl -i".

2011-04-08 21:01  fmhess

	* [r1564] configure.ac: Bumped version.

2011-04-08 20:34  fmhess

	* [r1563] drivers/gpib/include/gpib_types.h,
	  drivers/gpib/sys/autopoll.c, drivers/gpib/sys/device.c,